Bug 1915286 - Use 0rad as the default value if the path length is zero. r=dholbert

When ths path length is zero, we may get (0, 0) as the tangent angle
from `ComputePointAtLength()`. Using (0, 0) to atan2() may get an
undefined result. We should avoid this, so use 0rad. This makes more
sense and match other browsers.

Differential Revision: https://phabricator.services.mozilla.com/D220353